cambios para mobile

--- a/preentrgable1/pages/contacto.html
+++ b/preentrgable1/pages/contacto.html
@@ -21,7 +21,7 @@
 <body>
     <!--Linkeo de archivos-->
     <header class="header">
-        <img class="enlace-color-3" src="/imagenes/logo-empresa.jpg" alt="Logo Empresa">
+        <img class="enlace-color-3" src="../imagenes/logo-empresa.jpg" alt="Logo Empresa">
         <nav>
             <ul>
                 <li> <a class="enlace-color" href="/index.html">Inicio</a></li>
@@ -38,9 +38,10 @@
     <main>
         <h1 class="text-danger">Contacto</h1>
         <h2>¡Estamos acá, siempre cerca tuyo!</h2>
-        <iframe
+        <iframe class="iframe"
+
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26252.286978387685!2d-58.65357674999999!3d-34.66642255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbf5f948a3587%3A0xbcc7022470009127!2sPlaza%2020%20De%20Febrero!5e0!3m2!1ses!2sar!4v1702932712089!5m2!1ses!2sar"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            width="400" height="320" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <!--linkeo de imagenes de redes sociales-->
