--- a/preentrgable1/pages/iniciar-sesion.html
+++ b/preentrgable1/pages/iniciar-sesion.html
@@ -21,7 +21,7 @@
 <body>
     <header class="header">
         <!--Linkeo de archivos-->
-        <img class="enlace-color-3" src="./imagenes/logo-empresa.jpg" alt="Logo Empresa">
+        <img class="enlace-color-3" src="../imagenes/logo-empresa.jpg" alt="Logo Empresa">
         <nav>
             <ul>
                 <li> <a class="enlace-color" href="/index.html">Inicio</a></li>
