--- a/preentrgable1/pages/nosotros.html
+++ b/preentrgable1/pages/nosotros.html
@@ -21,7 +21,7 @@
 <body>
     <!--Linkeo de archivos-->
     <header class="header">
-        <img class="enlace-color-3" src="/imagenes/logo-empresa.jpg" alt="Logo Empresa">
+        <img class="enlace-color-3" src="../imagenes/logo-empresa.jpg" alt="Logo Empresa">
         <nav>
             <ul>
                 <li> <a class="enlace-color" href="../index.html">Inicio</a></li>
