--- a/preentrgable1/pages/productos.html
+++ b/preentrgable1/pages/productos.html
@@ -21,7 +21,7 @@
 
 <body>
     <header class="header">
-        <img class="enlace-color-3" src="/imagenes/logo-empresa.jpg" alt="Logo Empresa">
+        <img class="enlace-color-3" src="../imagenes/logo-empresa.jpg" alt="Logo Empresa">
 
         <nav>
             <ul>
