--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header class="header">
 
-        <img class="enlace-color-2" src="../preentrgable1/imagenes/bandera-italia.jpg"="Bandera Italiana">
+        <img class="enlace-color-2" src="./imagenes/bandera-italia.jpg"="Bandera Italiana">
         <img class="enlace-color-3" src="./imagenes/logo-empresa.jpg" alt="Logo Empresa">
         <nav>
             <!-- linkeo de archivos -->
