--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -36,6 +36,7 @@
     <main>
         <section>
             <h1 class="text-danger">¿Cómo llegamos hasta acá?</h1>
+            <h2> Un poco de nosotros...</h2>
             <p class="historia">En 1985, Manuela, Silvia y Alejandro comenzaron un sueño familiar. Alejandro, arquitecto
                 y Silvia,
                 licenciada en
