--- a/pages/productos.html
+++ b/pages/productos.html
@@ -45,7 +45,7 @@
         <h2>
             Nuestros productos
         </h2>
-        <div class="card-producto"> -->
+        <div class="card-producto">
             <section>
                 <h3>Gran picada calabresa</h3>
                 <p>Aceitunas verdes rellenas, aceitunas negras condimentadas, tomates hidratados en aceite de oliva,
@@ -82,7 +82,7 @@
                 <p>Aceitunas verdes rellenas, pategrás, fontina suizo, taluhet, quesos saborizados, queso sardo, queso
                     de
                     cabra, gruyere, queso azul , queso Mar del Plata de campo.</p>
-                <img src=".. /imagenes/picada-de-quesos.jpg" alt="Imagen de tabla de quesos">
+                <img src="../imagenes/picada-de-quesos.jpg" alt="Imagen de tabla de quesos">
             </section>
             <section>
                 <h3>Gran picada de la casa</h3>
